<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:inputType="numberDecimal"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edittext_password"
        android:inputType="textPassword"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:text="@string/not_registered" />

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:paddingLeft="10dp"
        android:text="@string/register"
        android:textStyle="bold" />
</LinearLayout>