<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registeractivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

        <EditText
            android:id="@+id/edittext_username"
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:layout_marginTop="160dp"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password" />
    <EditText
        android:id="@+id/edittext_confirmpassword"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"/>
    <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:text="Already Registered??" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:paddingLeft="10dp"
            android:text="@string/log"
            android:textStyle="bold" />
    </LinearLayout>