<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".StudentLoginActivity">

    <EditText
        android:id="@+id/edittext_enrollment_student"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginTop="160dp"
        android:inputType="numberDecimal"
        android:hint="@string/enrollment" />

    <EditText
        android:id="@+id/edittext_password_student"
        android:inputType="textPassword"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pass" />

    <Button
        android:id="@+id/button_login_student"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_student"/>
</LinearLayout>