<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".WelcomeTeacher">
    <EditText
        android:id="@+id/teacher_welcome"
        android:layout_width="500dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="                                      Welcome Teacher"/>

    <Button
        android:id="@+id/take_review"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:text="@string/takereview"/>

    <Button
        android:id="@+id/ratings"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/checkoutratings"/>
    <Button
        android:id="@+id/logout_button"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="-150dp"
        android:text="@string/logout"
        />
</LinearLayout>